--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bikewatching</title>
+  <link rel="stylesheet" href="global.css">
+  <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
+  <!-- Load Mapbox GL JS -->
+  <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
+  <!-- Load D3.js from CDN -->
+  <script src="https://d3js.org/d3.v7.min.js"></script>
+  <!-- Load your custom map initialization script -->
+  <script src="map.js"></script>
 </head>
 <body>
-  <h1>🚴🏼‍♀️ Bikewatching</h1>
+  <h1>Bikewatching</h1>
+  <!-- Mapbox GL JS JavaScript -->
+  <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
+  <div id="map">
+    <svg></svg>
+  </div>
 </body>
 </html>
