--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
   <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
   <!-- Load D3.js from CDN -->
   <script src="https://d3js.org/d3.v7.min.js"></script>
-  <!-- Load your custom map initialization script -->
-  <script src="map.js"></script>
 </head>
 <body>
   <h1>Bikewatching</h1>
+  <div id="map">
+    <svg id = 'circles'></svg>
+  </div>
   <!-- Mapbox GL JS JavaScript -->
   <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
-  <div id="map">
-    <svg></svg>
-  </div>
+  <!-- Load your custom map initialization script -->
+  <script src="map.js"></script>
 </body>
 </html>
