--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
 </head>
 <body>
   <h1>Bikewatching</h1>
+  <header>
+    <div class="time-container">
+      <label for="time-slider">Time of Day:</label>
+      <input type="range" id="time-slider" min="-1" max="1440" step="1" />
+      <em id="any-time">(any time)</em>
+      <time id="selected-time">11:59</time>
+    </div>
+  </header>
   <div id="map">
     <svg id = 'circles'></svg>
   </div>
