--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
   <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 <body>
-  <h1>Bikewatching</h1>
+  <!-- <h1>Bikewatching</h1> -->
   <header>
     <div class="time-container">
+      <h1>Bikewatching</h1>
       <label for="time-slider">Time of Day:</label>
       <input type="range" id="time-slider" min="-1" max="1440" step="1" />
       <em id="any-time">(any time)</em>
@@ -23,6 +24,11 @@
   </header>
   <div id="map">
     <svg id = 'circles'></svg>
+  </div>
+  <div class="legend">
+    <div style="--departure-ratio: 1">More departures</div>
+    <div style="--departure-ratio: 0.5">Balanced</div>
+    <div style="--departure-ratio: 0">More arrivals</div>
   </div>
   <!-- Mapbox GL JS JavaScript -->
   <script src="https://api.mapbox.com/mapbox-gl-js/v2.15.0/mapbox-gl.js"></script>
